# agent-config-doctor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
agent_config_doctor/: cli.py  rules.py  scanner.py
docs/: LAUNCH_STEPS_zh.md
examples/unsafe-agent/: .mcp.json  AGENTS.md
examples/unsafe-agent/.github/workflows/: agent.yml
examples/unsafe-agent/skills/deploy/: SKILL.md
tests/: test_scanner.py
