[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-config-doctor"
version = "0.1.0"
description = "Local-first scanner for AI coding agent configs, MCP files, skills, prompts, and workflow permissions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Agent Config Doctor contributors" }
]
keywords = [
  "ai-agent",
  "mcp",
  "security",
  "prompt-injection",
  "claude-code",
  "codex",
  "cursor"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.scripts]
agent-config-doctor = "agent_config_doctor.cli:main"

[tool.setuptools]
packages = ["agent_config_doctor"]
